force-app/main/default/objects/Detalle_Factura__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo para guardar los productos</description>
    <label>Precio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>