force-app/main/default/objects/Detalle_Factura__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacion de producto con detalle de factura</description>
    <inlineHelpText>Campo de relacion entre producto y detalle de factura</inlineHelpText>
    <label>Producto</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipLabel>Detalles Facturas</relationshipLabel>
    <relationshipName>Detalles_Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>